# py3_example

./: CMakeLists.txt  package.xml
scripts/: myscript.py
test/: test_my_stuff.launch  test_my_stuff.py
