<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py3_example</name>
  <version>0.1.0</version>
  <description>
  Test py3 issues
  </description>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>Apache 2.0</license>

  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros_environment</depend>

  <depend>rostest</depend>
</package>
